More style updates and dark mode fixes

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,14 @@
   src: url("/fonts/iAWriterQuattroV.ttf") format("truetype-variations");
 }
 
+@font-face {
+  font-family: "iA Quattro";
+  font-stretch: 25% 150%;
+  font-style: italic;
+  font-weight: 100 1000;
+  src: url("/fonts/iAWriterQuattroV-Italic.ttf") format("truetype-variations");
+}
+
 @tailwind base;
 
 @layer base {
@@ -12,14 +20,14 @@
     @apply bg-white text-gray-800 font-mono !important;
   }
   [aria-current="page"] {
-    @apply bg-gray-200 text-gray-800;
+    @apply bg-gray-100 text-gray-800;
   }
   [aria-current="false"] {
     @apply bg-white text-gray-800;
   }
   @media (prefers-color-scheme: dark) {
     body {
-      @apply bg-black text-gray-100;
+      @apply bg-black text-gray-100 !important;
     }
     [aria-current="false"] {
       @apply bg-black text-gray-400;
@@ -29,7 +37,7 @@
     }
   }
   p.large {
-    @apply text-xl leading-relaxed sm:text-xl sm:leading-loose sm:mb-6 mb-4;
+    @apply text-xl leading-loose sm:text-xl sm:mb-6 mb-4;
   }
   .book-image {
     position: relative;
